[added] ktlint integration